--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: CI/CD Pipeline
 
-# Trigger on push to main branch
 on:
   push:
     branches:
@@ -11,22 +10,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout your code
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      # 2️⃣ Set up Docker build
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      # 3️⃣ Build API Gateway Docker image
-      - name: Build API Gateway image
-        run: docker build -t api-gateway:latest ./services/api-gateway
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 4️⃣ Build Orders Service Docker image
-      - name: Build Orders Service image
-        run: docker build -t orders-service:latest ./services/orders-service
+    - name: Build and push API Gateway image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest ./services/api-gateway
+        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
 
-      # 5️⃣ Deploy to Kubernetes
-      - name: Deploy to Kubernetes
-        run: kubectl apply -f k8s/
+    - name: Build and push Orders Service image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/orders-service:latest ./services/orders-service
+        docker push ${{ secrets.DOCKER_USERNAME }}/orders-service:latest
+
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: v1.30.0
+
+    - name: Update Deployment images
+      run: |
+        kubectl set image deployment/api-gateway api-gateway=${{ secrets.DOCKER_USERNAME }}/api-gateway:latest -n backend-platform
+        kubectl set image deployment/orders-service orders-service=${{ secrets.DOCKER_USERNAME }}/orders-service:latest -n backend-platform
